--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,11 @@
 
 # Unity3D Generated File On Crash Reports
 sysinfo.txt
+
+# Visual Studio Junk
+.vs/
+*.sln
+*.csproj
+
+# Visual Studio Code
+.vscode/
